# Oxidized-Mania

./: .gitignore  Cargo.toml  README.md  README_CN.md  build.rs  config.json  editor_config.json  history.json
.claude/: settings.local.json
cache/roxcache/: Remo_Prototype_-_Sendan_Death.rox  Various_Artists_-_120BPM_Jack_Practice__HoshiMiya____JerryC_-_Canon_Rock_1_2x_.rox  Various_Artists_-_120BPM_Jack_Practice__HoshiMiya____Morimori_Atsushi_-_ViViT_0_95x_.rox  Various_Artists_-_120BPM_Jack_Practice__HoshiMiya____Otokaze_-_Sai-getsu_1_2x_.rox  Various_Artists_-_120BPM_Jack_Practice__HoshiMiya____Se-U-Ra_-_Relyna_.rox  Various_Artists_-_120BPM_Jack_Practice__HoshiMiya____TUYU_-_Shuuten_no_Saki_ga_Aru_to_Suru_Naraba__1_05x_.rox  Various_Artists_-_120BPM_Jack_Practice__HoshiMiya____kaf_vs__Kujira_-_Springtime_.rox  Various_Artists_-_120BPM_Jack_Practice__HoshiMiya____litmus_-_Lonely_Cat_0_95x_.rox  Various_Artists_-_120BPM_Jack_Practice__HoshiMiya____sasakure_UK_-_the_EmpError_.rox  Various_Artists_-_120BPM_Jack_Practice__HoshiMiya____t_pazolite_-_Refactoring_Travel__feat__Nanahira___Cut_Ver___.rox  Various_Artists_-_120BPM_Jack_Practice__HoshiMiya____uma_vs__Morimori_Atsushi_-_GLORYROAD_.rox  Various_Artists_-_Malody_4K_Regular_Dan_v3-Jack__Muses___Reg-10_Hiensou__Hinaka_Yuki_.rox  Various_Artists_-_Malody_4K_Regular_Dan_v3-Jack__Muses___Reg-3_Koi_Kou_Enishi__DongShaoZhou_.rox  (+74 more)
src/: app.rs  beatmap.rs  beatmap_cache.rs  config.rs  history.rs  main.rs  mania_difficulty.rs  pp.rs  replay.rs  replay_viewer.rs  skin.rs  sonic.rs
src/audio/: bass.rs  mod.rs
(+40 files in other folders)
